# Whisker-Analysis

./: .gitignore  .repo-to-text-settings.yaml  CMakeLists.txt  CMakePresets.json  README.md  code-checker.json  vcpkg.json
.github/actions/linux-setup/: action.yml
.github/workflows/: benchmark.yml  clang_format.yml  clang_tidy.yml  cmake.yml  code_checker.yml  dependency_checker.yml  iwyu.yml  macos_cmake.yml  optview2.yml  windows_cmake.yml
cmake/: CompilerWarnings.cmake
docs/: _quarto-pdf.yml  _quarto.yml  angle.html  angle.qmd  beam_parameters.html  beam_parameters.qmd  curvature.html  curvature.qmd  discretization.html  discretization.qmd  docs.Rproj  follicle.html  follicle.qmd  index.html  index.qmd  kinematics_overview.html  kinematics_overview.qmd  mask.html  mask.qmd  mechanics_overview.html  phase.html  phase.qmd  point.html  quality_parameters.html  search.json  velocity.html  velocity.qmd
docs/concepts/: _metadata.yml  index.html  index.qmd
docs/concepts/kinematics/: angle.html  curvature.html  curvature.qmd  kinematics_overview.html  phase.html  velocity.html
docs/concepts/mechanics/: mechanics_overview.html  mechanics_overview.qmd
docs/concepts/parameterization/: beam_parameters.html  beam_parameters.qmd  discretization.html  discretization.qmd  follicle.html  mask.html  mask.qmd  parameter_overview.html  parameter_overview.qmd  point.html  point.qmd  quality_parameters.html
docs/dev/bench/: data.js
docs/developer/: index.html  index.qmd
docs/kinematics/: angle.html  curvature.html  curvature.qmd  kinematics_overview.html  phase.html  velocity.html
docs/mechanics/: mechanics_overview.html
docs/media/: Mouse_head_template.ai  mouse_angle.ai  mouse_curvature.ai  mouse_phase.ai  mouse_whisker_points.ai
docs/parameterization/: beam_parameters.html  discretization.html  discretization.qmd  follicle.html  follicle.qmd  mask.html  parameter_overview.html  parameter_overview.qmd  point.html  quality_parameters.html  quality_parameters.qmd
docs/user_guide/: index.html
python/: __init__.py  whisker_analysis.py
scripts/: tracker.ipynb  video_processing.py
src/: CMakeLists.txt
src/Python/: python_main.cpp  utils.hpp
src/Python/WhiskerTracking/: whiskertracker_pybind.cpp
src/WhiskerParameterization/: geometry.hpp  whisker.cpp  whisker.hpp
src/WhiskerParameterization/Geometry/: curvature.cpp  curvature.hpp  lines.cpp  lines.hpp  mask.hpp  points.cpp  points.hpp  vector.cpp  vector.hpp
src/WhiskerTracking/: loaders.cpp  loaders.hpp  whiskertracker.cpp  whiskertracker.hpp  whiskertracker_pybind.cpp
src/WhiskerTracking/JaneliaWhiskerTracker/: CMakeLists.txt  detector_bank.cpp  detector_bank.hpp  io.hpp  janelia.cpp  janelia.hpp
tests/: CMakeLists.txt
tests/WhiskerParameterization/: CMakeLists.txt  benchmark_set.cpp  test_constants.hpp  test_distance.cpp  test_set.cpp
tests/WhiskerParameterization/Geometry/: benchmark_lines.cpp  benchmark_points.cpp  test_curvature.cpp  test_lines.cpp  test_mask.cpp  test_points.cpp  test_vector.cpp
tests/WhiskerTracking/: CMakeLists.txt  benchmark_loaders.cpp  benchmark_whiskertracker.cpp  conftest.py  test_data.hpp  test_loaders.cpp  test_loaders.hpp  test_whiskertracker.cpp  test_whiskertracker.py
tests/WhiskerTracking/data/: whiskers.csv
tests/in-source-build/: CMakeLists.txt
tests/in-source-build/project/: CMakeLists.txt  main.cpp  vcpkg.json
